[package]
name = "gtk-hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7.2", package = "gtk4", features = ["v4_10"] }
gtk4-layer-shell = "0.1.4"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
